--- a/InitialReport/InitialReportTeamNERD.tex
+++ b/InitialReport/InitialReportTeamNERD.tex
@@ -93,7 +93,7 @@ Additionally looking at the UL Highway Code manual helped us identify the Road M
 
 \section[short]{Part Two:}
 \subsection{Our Team}%Tanda
-We have established a number of ways we can work together as a team. A key aspect we distinguished was making sure we to see each other regularly to become familiar with each other to build team relationships. This involves having two weekly meeting on Monday at 3pm and Friday at 1pm, these weekly meetings ensure that we are knowledgeable on the progress of each member in the team at the start and end of the week as well as allowing sub teams whom have been working together to present work to all other members; when crucial deadlines arise emergency meetings on Wednesdays are added. Each meeting is recorded with a log that illustrates those who attended the agenda and outcome of the meeting, these minutes of the meeting are recorded by the project coordinator and emailed to each member with their designated tasks for the week; additionally for casual communication a Facebook group has been set-up.
+We have established a number of ways we can work together as a team. A key aspect we distinguished was making sure we to see each other regularly to become familiar with each other to build team relationships. This involves having two weekly meeting on Monday at 3pm and Friday at 1pm, these weekly meetings ensure that we are knowledgeable on the progress of each member in the team at the start and end of the week as well as allowing sub teams whom have been working separately to present work to all other members. Each meeting is recorded with a log that illustrates those who attended the agenda and outcome of the meeting, these minutes are recorded by the project coordinator and emailed to each member with their designated tasks for the week; additionally for casual communication a Facebook group has been set-up.
 
 \subsubsection[short]{Roles}
 
@@ -106,21 +106,20 @@ We have established a number of ways we can work together as a team. A key aspec
 \textbf{Note:} all group members are expected to code when designated tasks by Lead Programmers
 
 \subsection{Collaboration}%Jie
-To collaborate with others efficiently, each group member needs to focus on things they are good at. For example, someone may specialise in coding and some one at analysing. It is not a good idea to force everyone to do same work to purse the so-called 'equal'.\\The basic principle of team work is that all group members try their best on the parts they take responsibility for. Hence to achieve above all, group members have to communicate with each other well to show everyone's advantages. Based on that, the team leader could assign different assignments to each member. \\The biggest benefit of group work is that you always discuss with partners once you get trouble with something. More people could always figure out some creative thinking by brainstorm.
+To collaborate with others efficiently, each group member needs to focus on things they are good at. For example, someone may specialise in coding and some one at analysing, it is not a good idea to force everyone to do same work to purse the so-called 'equal'.\\The basic principle of team work is that all group members try their best on all parts they take responsibility for. Based on that, the team coordinator should assign different assignments to each member ensuring teamwork.
 
 \subsection{Peer Assessment}%Qiu
 Peer assessment is being applied in group projects,to show the individual work which based on guidelines in form of rubrics. In this group project,this assessment should based on some objects as below:
 
 \begin{enumerate}
-\item \textbf{Expression of ideas:} Showing how we going to design this traffic system including roads designing, language methods, math functions and so on. This is the main part of group meeting each time, leading us to form the object from nothing to prototype. Each group member has different background, knowledge and most significantly way of thinking which is the core of group work. So communication of ideas toward the project is worth grading.  
+\item \textbf{Expression of ideas:} Showing how we going to design this traffic system including roads designing, language methods, math functions and so on, leading us to form the system from nothing to prototype. Each group member has different background, knowledge and most significantly way of thinking which is the core of group work therefore communication of ideas toward the project is worth grading.  
 \item \textbf{Organization:} As a team we have a leader as organizer, who separates the jobs based on each members individual ability and creates a timetable as well as coordinate each part of the group work.
 \item \textbf{Subjects:} In this specific case, means the programming and designing ,algorithms as well as organization.This part should establish how the final work formed and each ones contribution.
 
 \end{enumerate}
-The peer assessment should consider objects worth grading and clearly determine each member of the groups contribution to the project.
 
 
 \subsection{Resolving Conflicts}%Mark
-During group projects conflicts are certain to happen when working with others based on the fact that we are 'Humans' and different. Everyone has their own viewpoints, and ways of handling the tasks. It is also important to understand that conflicts can be positive when it encourages group members to listen to each others for a new ideas which may be better for the general interest of a project.\\Therefore as a group we have looked at a range of techniques that would be helpful to take into consideration when conflict occurs. It is not about win or lose, correct or wrong, yes or no, it is about negotiating, listening and engaging all members; not excluded members. If needed group members should approach the group coordinator who should must maintain a good relationship with all members to help resolve any group issues and then come to a reasonably negotiation between both parties. \\What is important is that every member is respected and conflicts especially petty conflict's which are not specifically to do with work should not take priority. All conflicts should be resolved through discussion and the encouragement of both sides to accept peoples thoughts and opinions and look after the main goal/aims. 
+During group projects conflicts are certain to happen based on the fact that we are all different. It is also important to understand that conflicts can be positive when it encourages group members to listen to each others for a new ideas which may be better for the general interest of a project. If needed group members should approach the group coordinator who must maintain a good relationship with all members to help resolve any group issues and then come to a reasonably negotiation between both parties. \\It is important that every member is respected and conflicts especially petty conflict's do not take priority. 
 
 \end{document}
