--- a/InitialReport/InitialReportTeamNERD.tex
+++ b/InitialReport/InitialReportTeamNERD.tex
@@ -33,20 +33,28 @@ To design such a system as a group we believed it best to created a system model
 \begin{figure}[ht]%Figures
 \centering
 \begin{minipage}[b]{0.45\linewidth}
-		\includegraphics[width=6cm,height=4cm]{../UserControls.png} 
+		\includegraphics[width=6cm,height=4cm]{UserControls.png} 
 	\captionof{figure}{GUI Design Development}
 	\caption*{ }
 	\label{fig:GUI}
 \end{minipage}
 \begin{minipage}[b]{0.45\linewidth}
-	\includegraphics[width=6cm, height=4cm]{../WATERLOO.png} 	\captionof{figure}{Waterloo Roundabout}
+	\includegraphics[width=6cm, height=4cm]{WATERLOO.png} 	\captionof{figure}{Waterloo Roundabout}
 	\caption*{Source: Google Maps}
 	\label{fig:Waterloo}
 \end{minipage}
 
 \end{figure}
 
-Additionally looking at the UL Highway Code manual helped us identify the Road Marking rules and what they mean to  incorporate into our simulation. For example within our initial design Figure \ref{fig:GUI} is rule 127 about the Centre Line "Do not cross it unless you can see the road is clear and wish to overtake or turn off" and rule 175 about Stop Lines before the traffic lights where you must wait until the traffic light is green.\\Overall, thus far we have created a Model-View-Controller structure for the development in Eclipse IDE. We understand that the development of straight roads will be very easy and therefore have been doing research into the development of curved roads using analysis into Bezier Curves which should help us create curved roads and enable cars to move on them to create a roundabout.   
+Additionally looking at the UL Highway Code manual helped us identify the Road Marking rules and what they mean to  incorporate into our simulation. For example within our initial design Figure \ref{fig:GUI} is rule 127 about the Centre Line "Do not cross it unless you can see the road is clear and wish to overtake or turn off" and rule 175 about Stop Lines before the traffic lights where you must wait until the traffic light is green.\\Overall, thus far we have created a Model-View-Controller structure for the development in Eclipse IDE. We understand that the development of straight roads will be very easy and therefore have been doing research into the development of curved roads using analysis into Bezier Curves which should help us create curved roads and enable cars to move on them to create a roundabout.\\ 
+
+\textbf{Current Development Goals:}
+\begin{enumerate}
+	\item A car is able to travel on one straight road with one lane.
+	\item A car is able to travel on one straight road with multiple lanes.
+	\item A car should be able to travel 2 roads connected with one lane in each roads
+	\item A car is able to travel on two connected roads while each roads can have different numbers of lanes
+\end{enumerate}
 
 \begin{table}[ht]
 	\caption{Project Plan}
