--- a/InitialReport/InitialReportTeamNERD.tex
+++ b/InitialReport/InitialReportTeamNERD.tex
@@ -27,7 +27,7 @@ The problems the group has encountered and identified so far while learning abou
 The overall strategy for achieving the aim of the project is the use of the programming language Java. Initially there were suggestions for the use of JavaScript, HTML and PHP however due to the time restraints and lack of knowledge from the majority of the group we steered away from this option in choice of Java, which is a mutually known programming language the majority of the group felt comfortable using and had some experience with prior.\\There are a number of risks involved with the development of the project, our main concern is with the road development, it involves the most risk and is essential to the success of the project. Therefore in terms of a development cycle it is proposed that we use the Agile project management with a focus on risk management. This involves identifying the risk, responding to the risk and then reviewing the risk. This risk management is reflected in the Table \ref{table:plan} were there is continuous improvement to expose flaws faster with the two intense testing stages.
 
 %The progress
-\subsection{The Current Work}%Tanda
+\subsection{Current Process}%Tanda
 To design such a system as a group we believed it best to created a system modelled against the existing UK road network and laws. This can be seen within our initial design of the traffic simulation in Figure \ref{fig:GUI} which was created based loosely on the Waterloo roundabout seen in Figure \ref{fig:Waterloo}
 
 \begin{figure}[ht]%Figures
@@ -63,7 +63,6 @@ Additionally looking at the UK Highway Code manual helped us identify the Road M
 		
 		\begin{tabular}{|m{0.8cm}|m{6cm}|m{2.3cm}|m{1.3cm}|m{1.3cm}|c|m{2.6cm}|m{0.5cm}|}\hline
 			
-			
 			\bf{WBS} & \bf{Task} & \bf{Predecessors} & \bf{Start Date} & \bf{Deadline} & \bf{Work Days} & \bf{Responsible} & \bf{(\%)} \\ \hline 
 			1 & \multicolumn{7}{c|}{High Level Planning}  \\\hline 
 			1.1 & Look at existing applications &  & 19/01/215 & 23/01/15 & 4 & all & 100 \\ \hline 
@@ -95,7 +94,7 @@ Additionally looking at the UK Highway Code manual helped us identify the Road M
 			3.10 & Final Report & 3.8.1 & 02/03/15 & 23/03/15 & 21 & all & 0 \\\hline 
 			3.11 & Presentation & 3.10 & 23/03/15 & 23/03/15 & 1 & all & 0 \\ \hline 
 		\end{tabular}
-			\label{table:plan}
+	\label{table:plan}
 	\end{adjustwidth}
 \end{table}
 
@@ -106,9 +105,9 @@ We have established a number of ways we can work together as a team. A key aspec
 \subsubsection[short]{Roles}
 
 \begin{itemize}%Provisional Roles
-	\item Project Coordinator/Organizer: Tanda Kabanda
+	\item Project Coordinator: Tanda Kabanda
 	\item Lead Programmers: Inyeol Sohn, Jie Ding
-	\item Research/Analysis Leaders: Qiu Yun, Mark Azer
+	\item System Anaylsts: Qiu Yun, Mark Azer
 \end{itemize}
 
 \textbf{Note:} all group members are expected to code when designated tasks by Lead Programmers
