--- a/Meetings /GroupMeetingsLog.tex
+++ b/Meetings /GroupMeetingsLog.tex
@@ -99,7 +99,7 @@
 		Attendance: & Mark, Jie, Tanda, Qiu (Inyeol Ill Pardoned)\\   \hline
 		Duration: &  45 minutes\\  \hline
 		Agenda: & Editing the Initial Report and getting more contribution from group members for first section and brief talk on presentation and get the prototype on Github. \\ \hline
-		Outcome: &  Jie illustrated to the group a prototype and has explained the code together. Tanda and Jie had discussion about the GUI of the simulation and how to present the visualisation better shall be worked on by all group members.  \\  \hline
+		Outcome: &  Jie illustrated to the group a prototype and has explained the code together. Tanda and Jie had discussion about the GUI of the simulation and how to present the visualisation better shall be worked on by all group members. Mark assigned task to create presentation  \\  \hline
 		Weekly Tasks Completed: & \\ 
 		\hline
 	\end{tabular}
@@ -109,10 +109,25 @@
 	\begin{tabular}{|m{8cm}|m{6cm}|}
 		\hline
 		\multicolumn{2}{ |l|}{ \textbf{Meeting 8}} \\  \hline
-		Date: & 02/02/2015 (3pm) \\  \hline
+		Date: & 09/02/2015 (3pm) \\  \hline
+		Attendance: & Mark, Qiu, Inyeol, Jie, Tanda \\   \hline
+		Duration: &  40 minutes \\  \hline
+		Agenda: & Initial Report feedback for submission next day, dicuss prototype and preperations for presentation\\ \hline
+		road development. \\ \hline
+		Outcome: & Finalising presentation as a group and dicussion of the prototype.   \\  \hline
+		Weekly Tasks Completed: & Late feedback on initial report, was not helpful. Presentation still needs to be completed.\\ 
+		\hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 9}} \\  \hline
+		Date: & 13/02/2015 (1pm) \\  \hline
 		Attendance: & \\   \hline
 		Duration: &  \\  \hline
-		Agenda: & 
+		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.\\  \hline
 		road development. \\ \hline
 		Outcome: &  \\  \hline
 		Weekly Tasks Completed: & TEXT\\ 
