--- a/Meetings /GroupMeetingsLog.tex
+++ b/Meetings /GroupMeetingsLog.tex
@@ -125,6 +125,21 @@
 		\hline
 		\multicolumn{2}{ |l|}{ \textbf{Meeting 9}} \\  \hline
 		Date: & 13/02/2015 (1pm) \\  \hline
+		Attendance: & Jie, Mark, Tanda\\   \hline
+		Duration: & 1 hour (Tand and Jie) 10 minutes (Mark)  \\  \hline
+		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.\\  \hline
+		road development. Begin looking into the way we shall work together as a team despite some members not being the strongest programmers find a way to keep them actively invovled as issues that arose from the feedback given by lectuerer should be adressed and taken care of for the final report \\ \hline
+		Outcome: & Jie and Tanda going to work on system T Junction that can be used for all memebrs to be presented on Monday \\  \hline
+		Weekly Tasks Completed: & TEXT\\ 
+		\hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 9}} \\  \hline
+		Date: & 13/02/2015 (1pm) \\  \hline
 		Attendance: & \\   \hline
 		Duration: &  \\  \hline
 		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.\\  \hline
