--- a/Meetings /GroupMeetingsLog.tex
+++ b/Meetings /GroupMeetingsLog.tex
@@ -138,14 +138,15 @@
 \begin{table}[ht!]
 	\begin{tabular}{|m{8cm}|m{6cm}|}
 		\hline
-		\multicolumn{2}{ |l|}{ \textbf{Meeting 9}} \\  \hline
-		Date: & 13/02/2015 (1pm) \\  \hline
-		Attendance: & \\   \hline
-		Duration: &  \\  \hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 10}} \\  \hline
+		Date: & 16/02/2015 (3pm) \\  \hline
+		Attendance: & Tanda, Jie, Inyeol, Qiu, Mark\\   \hline
+		Duration: &  2 hours \\  \hline
 		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.\\  \hline
 		road development. \\ \hline
-		Outcome: &  \\  \hline
-		Weekly Tasks Completed: & TEXT\\ 
+		Outcome: & Defining road sizes, Continuing with traffic light development. Defined and finalised the road design.
+		Must have a basic application done to anaylse for Friday meeting.\\  \hline
+		Weekly Tasks Completed: & Yes\\ 
 		\hline
 	\end{tabular}
 \end{table}
