--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -5,7 +5,6 @@
 \definecolor{grey}{rgb}{0.9,0.9,0.9}
 
 \begin{document}
-	
 	\thispagestyle{empty} % Remove page numbering on this page
 
 	%	TITLE SECTION
@@ -30,14 +29,40 @@
 		\hfill Inyeol Sohn 1466384/1 \\
 		\hfill Qiu Yun 1430295/1 \\
 		\hfill King's College London \\
-		\hfill \texttt{https://github.com/tandak/nerd.git} \\
 	}
 	\clearpage % Whitespace to the end of the page
 	\tableofcontents
 	
-	\section{Introduction}
-	\section{Literature Review}
-	\subsection{Related Work}
+	\section{Introduction} %Introduce project and aim
+	\subsection{Scope}
+	\subsection{Objectives}
+	\section{Requirements} %What is needed for the project to be succesful 
+	\section{Related Work} %Examples of systems and dicussion of them compared to what we are creating.
 	\section{System Design}
+	\subsection{User Manual}
+	\section{Implementation} %Above sections can be completed for now when it gets to implementation contribution from programmers will be needed
+	\subsection{System Design Changes}
+	\section{Evaluation} %Technical Evaluation of the system
+	\subsection{Testing} %How we tested the program (e.g Black/White Box)
+	\section{Group Dicussion}
+	\subsection{Team Organisation} %How each member contributed to the project and how the workload was divided 
+	\textbf{Work Load Division:}\\ 
+	\section{Conclusion}
+	\subsection{Lessons Learned} 
+	\textbf{Program Development Lessons Learned:}\\ %Dicussion on the implementation
+	\textbf{Group Work Lessons Learned:}\\ %What we learnt about group work and working together
+	\subsection{Future Work} %How the project could be extended
+	\section{References}
+	\section{Appendices}
+	\subsection{Meeting Diaries} %Meeting Minutes kept and updated by project coordinator
+	\subsection{Personal Logs} %Each member should be completing there own log 
+	\subsection{Usecase Diagram} 
+	\subsection{Class Diagram}
+	\subsection{Sequence Diagram}
+	\subsection{Project Plan} %To be updated
+	\subsection{Gantt Chart}
+	\subsection{Project Risk Analysis Table}
+	\subsection{Live Application}
+	\subsection{Package Diagram}
 \end{document}
 
