Update and rename Meetings /GroupMeetingsLog.tex to Meetings/GroupMeetingsLog.tex
Minutes still need updating

--- a/Meetings/GroupMeetingsLog.tex
+++ b/Meetings/GroupMeetingsLog.tex
@@ -9,7 +9,7 @@
  \hline
  \multicolumn{2}{ |l|}{ \textbf{Meeting 1}} \\  \hline
  Date: & 1 Hour \\  \hline
- Attendance: & Mark, Inyeol, Yun, Jie, Tanda  \\   \hline
+ Attendance: & Mark, Inyeol, Qiu, Jie, Tanda  \\   \hline
  Duration: & TEXT \\  \hline
  Agenda: & Aim for project, ways of developing project and meet group
  members, decide which days are best for meetings and get to
@@ -142,12 +142,44 @@
 		Date: & 16/02/2015 (3pm) \\  \hline
 		Attendance: & Tanda, Jie, Inyeol, Qiu, Mark\\   \hline
 		Duration: &  2 hours \\  \hline
-		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. Lead programmers need to distribute tasks.\\  \hline
-		road development. \\ \hline
-		Outcome: & Defining road sizes, Continuing with traffic light development. Defined and finalised the road design.
-		Must have a basic application done to anaylse for Friday meeting.\\  \hline
-		Weekly Tasks Completed: & Yes\\ 
+		Agenda: & Make sure there is contribution to the Github from all members, final report and progression with implementation. \\  \hline
+		Outcome: & Defining road sizes, Continuing with traffic light development. Defined and finalised the road design. Must have a basic application done to anaylse for Friday meeting. Lead programmers need to dicuss more with group about the implemenation\\  \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
 		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 11}} \\  \hline
+		Date: & 20/02/2015 (1pm) \\  \hline
+		Attendance: & Jie, Tanda, Qiu, Inyeol\\ \hline
+		Duration: &   \\  \hline
+		Agenda: & Finalise the structure of the Traffic Simulation, Finalise the user manual and continue distributing Final report sections to be completed as drafts.  \\ \hline
+		Outcome: & \\  \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 12}} \\  \hline
+		Date: & 20/02/2015 (1pm) \\  \hline
+		Attendance: & \\ \hline
+		Duration: &  \\  \hline
+		Agenda: & \\ \hline
+		Outcome: & \\  \hline
+	\end{tabular}
+\end{table}
+
+\begin{table}[ht!]
+	\begin{tabular}{|m{8cm}|m{6cm}|}
+		\hline
+		\multicolumn{2}{ |l|}{ \textbf{Meeting 13}} \\  \hline
+		Date: & 20/02/2015 (1pm) \\  \hline
+		Attendance: & \\ \hline
+		Duration: &  \\  \hline
+		Agenda: & \\ \hline
+		Outcome: & \\  \hline
 	\end{tabular}
 \end{table}
 
