--- a/FinalReport.tex
+++ b/FinalReport.tex
@@ -35,7 +35,7 @@
 	
 	\section{Introduction} %Introduce project and aim
 	\subsection{Scope}
-	\subsection{Objectives}
+	\subsection{Objectives} %Making The Map - More maps addtional stuff
 	\section{Requirements} %What is needed for the project to be succesful 
 	\section{Related Work} %Examples of systems and dicussion of them compared to what we are creating.
 	\section{System Design}
