--- a/Meetings/GroupMeetingsLog.tex
+++ b/Meetings/GroupMeetingsLog.tex
@@ -153,9 +153,9 @@
 		\multicolumn{2}{ |l|}{ \textbf{Meeting 11}} \\  \hline
 		Date: & 20/02/2015 (1pm) \\  \hline
 		Attendance: & Jie, Tanda, Qiu, Inyeol\\ \hline
-		Duration: &   \\  \hline
+		Duration: &  1 Hour \\  \hline
 		Agenda: & Finalise the structure of the Traffic Simulation, Finalise the user manual and continue distributing Final report sections to be completed as drafts.  \\ \hline
-		Outcome: & \\  \hline
+		Outcome: & Qiu and Jie shall work on Line equation solver (due monday) Start to finalise thoughts towards the report \\  \hline
 	\end{tabular}
 \end{table}
 
@@ -163,7 +163,7 @@
 	\begin{tabular}{|m{8cm}|m{6cm}|}
 		\hline
 		\multicolumn{2}{ |l|}{ \textbf{Meeting 12}} \\  \hline
-		Date: & 20/02/2015 (1pm) \\  \hline
+		Date: & 23/02/2015 (1pm) \\  \hline
 		Attendance: & \\ \hline
 		Duration: &  \\  \hline
 		Agenda: & \\ \hline
